// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`define-style > basic 1`] = `
"
        defineStyle(\`
          .foo {
            color: red;
          }
        \`)
      "
`;

exports[`define-style > syntax error 1`] = `
"
        defineStyle(\`
          .foo {
            color: red
            background: blue;
          }
        \`)
        "
`;
